--- a/unit_test/unit_test.vcxproj
+++ b/unit_test/unit_test.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="unit_test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\async_client.hpp" />
     <ClInclude Include="..\include\detail\detail.hpp" />
     <ClInclude Include="..\include\detail\func_register.hpp" />
     <ClInclude Include="..\include\detail\endec.hpp" />
@@ -120,7 +121,7 @@
     <ClInclude Include="..\include\detail\rpc_req.hpp" />
     <ClInclude Include="..\include\detail\rpc_session.hpp" />
     <ClInclude Include="..\include\rpc_client.hpp" />
-    <ClInclude Include="..\include\rpc_engine.hpp" />
+    <ClInclude Include="..\include\rpc_proactor_pool.hpp" />
     <ClInclude Include="..\include\rpc_error.hpp" />
     <ClInclude Include="..\include\rpc_server.hpp" />
     <ClInclude Include="..\include\xsimple_rpc.hpp" />
