--- a/unit_test/rpc_client/Makefile
+++ b/unit_test/rpc_client/Makefile
@@ -8,11 +8,10 @@ CFLAGS = -g -W \
 -Winvalid-pch \
 -std=c++1z \
 -I ./../../include \
--lpthread
-run:server
-	./rpc_client
-server:rpc_client
-	g++ rpc_client.cpp $(CFLAGS) -o rpc_client
-rm_server:
-	$(shell if [ -f rpc_client]; then rm rpc_client; fi;)
+-l pthread
+
+client:rm
+	g++ rpc_client.cpp $(CFLAGS) -o rpc_client 
+rm:
+	$(shell if [ -f rpc_client ]; then rm rpc_client; fi;)
 
